# ai-ticketing-backend

./: .gitignore  Makefile  README.md  docker-compose.yml  pytest.ini
docs/postman/: ai-ticketing.postman_collection.json
services/api/: Dockerfile  pyproject.toml
services/api/app/: config.py  main.py
services/api/app/db/: mongo.py
services/api/app/models/: ticket.py
services/api/app/queue/: redis_queue.py
services/api/app/routes/: tickets.py
services/worker/: Dockerfile  pyproject.toml
services/worker/worker/: config.py  main.py  processor.py
services/worker/worker/db/: mongo.py
services/worker/worker/llm/: openai_client.py
services/worker/worker/queue/: redis_queue.py
tests/e2e/: test_post_ticket_substep1.py  test_smoke.py  test_ticket_contract.py
tests/worker/: test_worker_substep3.py
