[project]
name = "api"
version = "0.1.0"
description = "AI Ticketing API service scaffold"
requires-python = ">=3.11"
dependencies = ["fastapi==0.111.0", "uvicorn[standard]==0.30.0", "pydantic==2.8.2", "pydantic-settings==2.4.0"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

