[project]
name = "worker"
version = "0.1.0"
description = "AI Ticketing worker scaffold"
requires-python = ">=3.11"
dependencies = ["pydantic==2.8.2", "pydantic-settings==2.4.0", "pymongo==4.6.3",
  "redis==5.0.5", "httpx==0.27.2"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["worker"]
